Added txt & img

--- a/index.html
+++ b/index.html
@@ -3,5 +3,7 @@
         <h1>
             Hello World
         </h1>
+        <p>This webpage is created for class 5 exercise by Abilash Venkatesan</p>
+        <img src="https://i.redd.it/i73ykjerlz221.jpg">
     </body>
 </head>
